welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:4: error: not found: value de1
      return (de1%6)+1+die2
              ^